elzc/parser/ElzParser.cpp

// Generated from Elz.g4 by ANTLR 4.7


#include "ElzListener.h"

#include "ElzParser.h"


using namespace antlrcpp;
using namespace antlr4;

ElzParser::ElzParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

ElzParser::~ElzParser() {
  delete _interpreter;
}

std::string ElzParser::getGrammarFileName() const {
  return "Elz.g4";
}

const std::vector<std::string>& ElzParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& ElzParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgContext ------------------------------------------------------------------

ElzParser::ProgContext::ProgContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ElzParser::TopStatListContext* ElzParser::ProgContext::topStatList() {
  return getRuleContext<ElzParser::TopStatListContext>(0);
}


size_t ElzParser::ProgContext::getRuleIndex() const {
  return ElzParser::RuleProg;
}

void ElzParser::ProgContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ElzListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProg(this);
}

void ElzParser::ProgContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ElzListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProg(this);
}

ElzParser::ProgContext* ElzParser::prog() {
  ProgContext *_localctx = _tracker.createInstance<ProgContext>(_ctx, getState());
  enterRule(_localctx, 0, ElzParser::RuleProg);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(65);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << ElzParser::T__0)
      | (1ULL << ElzParser::T__12)
      | (1ULL << ElzParser::T__15)
      | (1ULL << ElzParser::T__17)
      | (1ULL << ElzParser::T__18)
      | (1ULL << ElzParser::T__19))) != 0)) {
      setState(64);
      topStatList();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TopStatListContext ------------------------------------------------------------------

ElzParser::TopStatListContext::TopStatListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<ElzParser::TopStatContext *> ElzParser::TopStatListContext::topStat() {
  return getRuleContexts<ElzParser::TopStatContext>();
}

ElzParser::TopStatContext* ElzParser::TopStatListContext::topStat(size_t i) {
  return getRuleContext<ElzParser::TopStatContext>(i);
}


size_t ElzParser::TopStatListContext::getRuleIndex() const {
  return ElzParser::RuleTopStatList;
}

void ElzParser::TopStatListContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ElzListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTopStatList(this);
}

void ElzParser::TopStatListContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ElzListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTopStatList(this);
}

ElzParser::TopStatListContext* ElzParser::topStatList() {
  TopStatListContext *_localctx = _tracker.createInstance<TopStatListContext>(_ctx, getState());
  enterRule(_localctx, 2, ElzParser::RuleTopStatList);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(68); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(67);
      topStat();
      setState(70); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << ElzParser::T__0)
      | (1ULL << ElzParser::T__12)
      | (1ULL << ElzParser::T__15)
      | (1ULL << ElzParser::T__17)
      | (1ULL << ElzParser::T__18)
      | (1ULL << ElzParser::T__19))) != 0));
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TopStatContext ------------------------------------------------------------------

ElzParser::TopStatContext::TopStatContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ElzParser::FnDefineContext* ElzParser::TopStatContext::fnDefine() {
  return getRuleContext<ElzParser::FnDefineContext>(0);
}

ElzParser::VarDefineContext* ElzParser::TopStatContext::varDefine() {
  return getRuleContext<ElzParser::VarDefineContext>(0);
}

ElzParser::TypeDefineContext* ElzParser::TopStatContext::typeDefine() {
  return getRuleContext<ElzParser::TypeDefineContext>(0);
}

ElzParser::ImplBlockContext* ElzParser::TopStatContext::implBlock() {
  return getRuleContext<ElzParser::ImplBlockContext>(0);
}

ElzParser::TraitDefineContext* ElzParser::TopStatContext::traitDefine() {
  return getRuleContext<ElzParser::TraitDefineContext>(0);
}

ElzParser::ImportStatContext* ElzParser::TopStatContext::importStat() {
  return getRuleContext<ElzParser::ImportStatContext>(0);
}


size_t ElzParser::TopStatContext::getRuleIndex() const {
  return ElzParser::RuleTopStat;
}

void ElzParser::TopStatContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ElzListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTopStat(this);
}

void ElzParser::TopStatContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ElzListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTopStat(this);
}

ElzParser::TopStatContext* ElzParser::topStat() {
  TopStatContext *_localctx = _tracker.createInstance<TopStatContext>(_ctx, getState());
  enterRule(_localctx, 4, ElzParser::RuleTopStat);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(78);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case ElzParser::T__17: {
        enterOuterAlt(_localctx, 1);
        setState(72);
        fnDefine();
        break;
      }

      case ElzParser::T__15: {
        enterOuterAlt(_localctx, 2);
        setState(73);
        varDefine();
        break;
      }

      case ElzParser::T__18: {
        enterOuterAlt(_localctx, 3);
        setState(74);
        typeDefine();
        break;
      }

      case ElzParser::T__12: {
        enterOuterAlt(_localctx, 4);
        setState(75);
        implBlock();
        break;
      }

      case ElzParser::T__19: {
        enterOuterAlt(_localctx, 5);
        setState(76);
        traitDefine();
        break;
      }

      case ElzParser::T__0: {
        enterOuterAlt(_localctx, 6);
        setState(77);
        importStat();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ImportStatContext ------------------------------------------------------------------

ElzParser::ImportStatContext::ImportStatContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ElzParser::ImportStatContext::ID() {
  return getToken(ElzParser::ID, 0);
}


size_t ElzParser::ImportStatContext::getRuleIndex() const {
  return ElzParser::RuleImportStat;
}

void ElzParser::ImportStatContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ElzListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterImportStat(this);
}

void ElzParser::ImportStatContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ElzListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitImportStat(this);
}

ElzParser::ImportStatContext* ElzParser::importStat() {
  ImportStatContext *_localctx = _tracker.createInstance<ImportStatContext>(_ctx, getState());
  enterRule(_localctx, 6, ElzParser::RuleImportStat);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(80);
    match(ElzParser::T__0);
    setState(81);
    match(ElzParser::ID);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatListContext ------------------------------------------------------------------

ElzParser::StatListContext::StatListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<ElzParser::StatContext *> ElzParser::StatListContext::stat() {
  return getRuleContexts<ElzParser::StatContext>();
}

ElzParser::StatContext* ElzParser::StatListContext::stat(size_t i) {
  return getRuleContext<ElzParser::StatContext>(i);
}


size_t ElzParser::StatListContext::getRuleIndex() const {
  return ElzParser::RuleStatList;
}

void ElzParser::StatListContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ElzListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatList(this);
}

void ElzParser::StatListContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ElzListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatList(this);
}

ElzParser::StatListContext* ElzParser::statList() {
  StatListContext *_localctx = _tracker.createInstance<StatListContext>(_ctx, getState());
  enterRule(_localctx, 8, ElzParser::RuleStatList);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(84); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(83);
      stat();
      setState(86); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << ElzParser::T__1)
      | (1ULL << ElzParser::T__2)
      | (1ULL << ElzParser::T__5)
      | (1ULL << ElzParser::T__15)
      | (1ULL << ElzParser::ID))) != 0));
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatContext ------------------------------------------------------------------

ElzParser::StatContext::StatContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ElzParser::VarDefineContext* ElzParser::StatContext::varDefine() {
  return getRuleContext<ElzParser::VarDefineContext>(0);
}

ElzParser::LoopStatContext* ElzParser::StatContext::loopStat() {
  return getRuleContext<ElzParser::LoopStatContext>(0);
}

ElzParser::ReturnStatContext* ElzParser::StatContext::returnStat() {
  return getRuleContext<ElzParser::ReturnStatContext>(0);
}

ElzParser::AssignContext* ElzParser::StatContext::assign() {
  return getRuleContext<ElzParser::AssignContext>(0);
}

ElzParser::ExprStatContext* ElzParser::StatContext::exprStat() {
  return getRuleContext<ElzParser::ExprStatContext>(0);
}


size_t ElzParser::StatContext::getRuleIndex() const {
  return ElzParser::RuleStat;
}

void ElzParser::StatContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ElzListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStat(this);
}

void ElzParser::StatContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ElzListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStat(this);
}

ElzParser::StatContext* ElzParser::stat() {
  StatContext *_localctx = _tracker.createInstance<StatContext>(_ctx, getState());
  enterRule(_localctx, 10, ElzParser::RuleStat);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(93);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(88);
      varDefine();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(89);
      loopStat();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(90);
      returnStat();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(91);
      assign();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(92);
      exprStat();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ReturnStatContext ------------------------------------------------------------------

ElzParser::ReturnStatContext::ReturnStatContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ElzParser::ExprContext* ElzParser::ReturnStatContext::expr() {
  return getRuleContext<ElzParser::ExprContext>(0);
}


size_t ElzParser::ReturnStatContext::getRuleIndex() const {
  return ElzParser::RuleReturnStat;
}

void ElzParser::ReturnStatContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ElzListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterReturnStat(this);
}

void ElzParser::ReturnStatContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ElzListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitReturnStat(this);
}

ElzParser::ReturnStatContext* ElzParser::returnStat() {
  ReturnStatContext *_localctx = _tracker.createInstance<ReturnStatContext>(_ctx, getState());
  enterRule(_localctx, 12, ElzParser::RuleReturnStat);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(95);
    match(ElzParser::T__1);
    setState(96);
    expr(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LoopStatContext ------------------------------------------------------------------

ElzParser::LoopStatContext::LoopStatContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ElzParser::StatListContext* ElzParser::LoopStatContext::statList() {
  return getRuleContext<ElzParser::StatListContext>(0);
}


size_t ElzParser::LoopStatContext::getRuleIndex() const {
  return ElzParser::RuleLoopStat;
}

void ElzParser::LoopStatContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ElzListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLoopStat(this);
}

void ElzParser::LoopStatContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ElzListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLoopStat(this);
}

ElzParser::LoopStatContext* ElzParser::loopStat() {
  LoopStatContext *_localctx = _tracker.createInstance<LoopStatContext>(_ctx, getState());
  enterRule(_localctx, 14, ElzParser::RuleLoopStat);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(98);
    match(ElzParser::T__2);
    setState(99);
    match(ElzParser::T__3);
    setState(101);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << ElzParser::T__1)
      | (1ULL << ElzParser::T__2)
      | (1ULL << ElzParser::T__5)
      | (1ULL << ElzParser::T__15)
      | (1ULL << ElzParser::ID))) != 0)) {
      setState(100);
      statList();
    }
    setState(103);
    match(ElzParser::T__4);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExprStatContext ------------------------------------------------------------------

ElzParser::ExprStatContext::ExprStatContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ElzParser::MatchRuleContext* ElzParser::ExprStatContext::matchRule() {
  return getRuleContext<ElzParser::MatchRuleContext>(0);
}

ElzParser::FnCallContext* ElzParser::ExprStatContext::fnCall() {
  return getRuleContext<ElzParser::FnCallContext>(0);
}


size_t ElzParser::ExprStatContext::getRuleIndex() const {
  return ElzParser::RuleExprStat;
}

void ElzParser::ExprStatContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ElzListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExprStat(this);
}

void ElzParser::ExprStatContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ElzListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExprStat(this);
}

ElzParser::ExprStatContext* ElzParser::exprStat() {
  ExprStatContext *_localctx = _tracker.createInstance<ExprStatContext>(_ctx, getState());
  enterRule(_localctx, 16, ElzParser::RuleExprStat);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(107);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case ElzParser::T__5: {
        enterOuterAlt(_localctx, 1);
        setState(105);
        matchRule();
        break;
      }

      case ElzParser::ID: {
        enterOuterAlt(_localctx, 2);
        setState(106);
        fnCall();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MatchRuleContext ------------------------------------------------------------------

ElzParser::MatchRuleContext::MatchRuleContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<ElzParser::ExprContext *> ElzParser::MatchRuleContext::expr() {
  return getRuleContexts<ElzParser::ExprContext>();
}

ElzParser::ExprContext* ElzParser::MatchRuleContext::expr(size_t i) {
  return getRuleContext<ElzParser::ExprContext>(i);
}

std::vector<ElzParser::StatContext *> ElzParser::MatchRuleContext::stat() {
  return getRuleContexts<ElzParser::StatContext>();
}

ElzParser::StatContext* ElzParser::MatchRuleContext::stat(size_t i) {
  return getRuleContext<ElzParser::StatContext>(i);
}


size_t ElzParser::MatchRuleContext::getRuleIndex() const {
  return ElzParser::RuleMatchRule;
}

void ElzParser::MatchRuleContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ElzListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMatchRule(this);
}

void ElzParser::MatchRuleContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ElzListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMatchRule(this);
}

ElzParser::MatchRuleContext* ElzParser::matchRule() {
  MatchRuleContext *_localctx = _tracker.createInstance<MatchRuleContext>(_ctx, getState());
  enterRule(_localctx, 18, ElzParser::RuleMatchRule);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(109);
    match(ElzParser::T__5);
    setState(110);
    expr(0);
    setState(111);
    match(ElzParser::T__3);
    setState(112);
    expr(0);
    setState(113);
    match(ElzParser::T__6);
    setState(114);
    stat();
    setState(122);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(115);
        match(ElzParser::T__7);
        setState(116);
        expr(0);
        setState(117);
        match(ElzParser::T__6);
        setState(118);
        stat(); 
      }
      setState(124);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx);
    }
    setState(126);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == ElzParser::T__7) {
      setState(125);
      match(ElzParser::T__7);
    }
    setState(128);
    match(ElzParser::T__4);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AssignContext ------------------------------------------------------------------

ElzParser::AssignContext::AssignContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ElzParser::AssignContext::ID() {
  return getToken(ElzParser::ID, 0);
}

ElzParser::ExprContext* ElzParser::AssignContext::expr() {
  return getRuleContext<ElzParser::ExprContext>(0);
}


size_t ElzParser::AssignContext::getRuleIndex() const {
  return ElzParser::RuleAssign;
}

void ElzParser::AssignContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ElzListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAssign(this);
}

void ElzParser::AssignContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ElzListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAssign(this);
}

ElzParser::AssignContext* ElzParser::assign() {
  AssignContext *_localctx = _tracker.createInstance<AssignContext>(_ctx, getState());
  enterRule(_localctx, 20, ElzParser::RuleAssign);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(130);
    match(ElzParser::ID);
    setState(131);
    match(ElzParser::T__8);
    setState(132);
    expr(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExprListContext ------------------------------------------------------------------

ElzParser::ExprListContext::ExprListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<ElzParser::ExprContext *> ElzParser::ExprListContext::expr() {
  return getRuleContexts<ElzParser::ExprContext>();
}

ElzParser::ExprContext* ElzParser::ExprListContext::expr(size_t i) {
  return getRuleContext<ElzParser::ExprContext>(i);
}


size_t ElzParser::ExprListContext::getRuleIndex() const {
  return ElzParser::RuleExprList;
}

void ElzParser::ExprListContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ElzListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExprList(this);
}

void ElzParser::ExprListContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ElzListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExprList(this);
}

ElzParser::ExprListContext* ElzParser::exprList() {
  ExprListContext *_localctx = _tracker.createInstance<ExprListContext>(_ctx, getState());
  enterRule(_localctx, 22, ElzParser::RuleExprList);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(134);
    expr(0);
    setState(139);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == ElzParser::T__7) {
      setState(135);
      match(ElzParser::T__7);
      setState(136);
      expr(0);
      setState(141);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FnCallContext ------------------------------------------------------------------

ElzParser::FnCallContext::FnCallContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ElzParser::FnCallContext::ID() {
  return getToken(ElzParser::ID, 0);
}

ElzParser::ExprListContext* ElzParser::FnCallContext::exprList() {
  return getRuleContext<ElzParser::ExprListContext>(0);
}


size_t ElzParser::FnCallContext::getRuleIndex() const {
  return ElzParser::RuleFnCall;
}

void ElzParser::FnCallContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ElzListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFnCall(this);
}

void ElzParser::FnCallContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ElzListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFnCall(this);
}

ElzParser::FnCallContext* ElzParser::fnCall() {
  FnCallContext *_localctx = _tracker.createInstance<FnCallContext>(_ctx, getState());
  enterRule(_localctx, 24, ElzParser::RuleFnCall);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(142);
    match(ElzParser::ID);
    setState(143);
    match(ElzParser::T__9);
    setState(145);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << ElzParser::T__5)
      | (1ULL << ElzParser::T__9)
      | (1ULL << ElzParser::ID)
      | (1ULL << ElzParser::NUM)
      | (1ULL << ElzParser::STRING))) != 0)) {
      setState(144);
      exprList();
    }
    setState(147);
    match(ElzParser::T__10);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypePassContext ------------------------------------------------------------------

ElzParser::TypePassContext::TypePassContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ElzParser::TypePassContext::ID() {
  return getToken(ElzParser::ID, 0);
}


size_t ElzParser::TypePassContext::getRuleIndex() const {
  return ElzParser::RuleTypePass;
}

void ElzParser::TypePassContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ElzListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTypePass(this);
}

void ElzParser::TypePassContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ElzListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTypePass(this);
}

ElzParser::TypePassContext* ElzParser::typePass() {
  TypePassContext *_localctx = _tracker.createInstance<TypePassContext>(_ctx, getState());
  enterRule(_localctx, 26, ElzParser::RuleTypePass);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(149);
    match(ElzParser::ID);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeListContext ------------------------------------------------------------------

ElzParser::TypeListContext::TypeListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<ElzParser::TypePassContext *> ElzParser::TypeListContext::typePass() {
  return getRuleContexts<ElzParser::TypePassContext>();
}

ElzParser::TypePassContext* ElzParser::TypeListContext::typePass(size_t i) {
  return getRuleContext<ElzParser::TypePassContext>(i);
}


size_t ElzParser::TypeListContext::getRuleIndex() const {
  return ElzParser::RuleTypeList;
}

void ElzParser::TypeListContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ElzListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTypeList(this);
}

void ElzParser::TypeListContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ElzListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTypeList(this);
}
